first contact us done

--- a/contents/cont_html/contact_us1.html
+++ b/contents/cont_html/contact_us1.html
@@ -12,6 +12,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&family=My+Soul&family=Quicksand:wght@300;500;700&display=swap"
 		rel="stylesheet">
+		
 </head>
 
 <body>
@@ -28,29 +29,29 @@
 				</div>
 			</div>
 			<div class="form-group-items">
-				<label for="surname">Surname</label>
 				<div class="form-input-group">
-					<input type="text" name="surname" class="input-group-cont">
+					<input type="text" name="surname" class="input-group-cont"placeholder="Surname">
 				</div>
 			</div>
 			<div class="form-group-items">
-				<label for="email">E-mail</label>
 				<div class="form-input-group">
-					<input type="email" name="email" class="input-group-cont">
+					<input type="email" name="email" class="input-group-cont"placeholder="E-mail">
 				</div>
 			</div>
 			<div class="form-group-items">
-				<label for="message">Message</label>
 				<div class="form-input-group">
-					<textarea name="message" id="message" class="input-group-cont" cols="30" rows="10"></textarea>
+					<textarea name="message" id="message" class="input-group-cont"placeholder="Message"></textarea>
 				</div>
 			</div>
 			<div class="form-group-items">
-				<button type="submit" class="from-group_button">Submit</button>
+				<button type="submit" class="from-group_button">Submit <ion-icon class="button_arrow" name="arrow-forward-outline"></ion-icon></button>
 			</div>
 		</form>
 		<div class="circle"></div>
 	</div>
+
+	<script type="module" src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
