--- a/contents/cont_html/contact_us1.html
+++ b/contents/cont_html/contact_us1.html
@@ -44,7 +44,9 @@
 				</div>
 			</div>
 			<div class="form-group-items">
+	<div class="form-input-group">
 				<button type="submit" class="from-group_button">Submit <ion-icon class="button_arrow" name="arrow-forward-outline"></ion-icon></button>
+			</div>
 			</div>
 		</form>
 		<div class="circle"></div>
