--- a/contents/cont_html/contact_us1.html
+++ b/contents/cont_html/contact_us1.html
@@ -21,7 +21,7 @@
 		<div class="circle"></div>
 		<form action="" class="contact_us-1">
 			<div class="form-header">
-				<h1>Contact Us</h1>
+				<h1 class="gradient-text">Contact Us</h1>
 			</div>
 			<div class="form-group-items">
 				<div class="form-input-group">
