--- a/index.html
+++ b/index.html
@@ -254,13 +254,41 @@
         </div>
         <div class="contact-us__form">
           <form action="" class="contact-us">
-            <label for="name">Your Name</label>
-            <input type="text"placeholder="Your Name">
-            <label for="email">Your E-mail</label>
-            <input type="email" placeholder="E-mail">
-            <label for="message">Your Message</label>
-            <textarea name="message" id="message" cols="30" rows="10"></textarea>
-            <button type="submit">Send Message</button>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <label for="name">Your Name</label>
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <input type="text"placeholder="Your Name">
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <label for="email">Your E-mail</label>
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <input type="email" placeholder="E-mail">
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <label for="message">Your Message</label>
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <textarea name="message" id="message"></textarea>
+              </div>
+            </div>
+            <div class="form-group-items">
+              <div class="form-group-input">
+                <button type="submit">Send Message</button>
+              </div>
+            </div>
           </form>
         </div>
       </div>
