contact-us done

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
         <div class="contact-us__form">
           <form action="" class="contact-us">
             <div class="form-group-items">
-              <div class="form-group-input">
-                <label for="name">Your Name</label>
+              <div class="form-group-label">
+                <label class="label" for="name">Your Name</label>
               </div>
             </div>
             <div class="form-group-items">
@@ -265,8 +265,8 @@
               </div>
             </div>
             <div class="form-group-items">
-              <div class="form-group-input">
-                <label for="email">Your E-mail</label>
+              <div class="form-group-label">
+                <label class="label" for="email">Your E-mail</label>
               </div>
             </div>
             <div class="form-group-items">
@@ -275,17 +275,17 @@
               </div>
             </div>
             <div class="form-group-items">
-              <div class="form-group-input">
-                <label for="message">Your Message</label>
+              <div class="form-group-label">
+                <label  class="label" for="message">Your Message</label>
               </div>
             </div>
             <div class="form-group-items">
-              <div class="form-group-input">
-                <textarea name="message" id="message"></textarea>
+              <div class="form-group-input" id="textarea">
+                <textarea name="message" id="message" placeholder="Message"></textarea>
               </div>
             </div>
             <div class="form-group-items">
-              <div class="form-group-input">
+              <div class="form-group-button">
                 <button type="submit">Send Message</button>
               </div>
             </div>
