first component design fixing

--- a/index.html
+++ b/index.html
@@ -51,6 +51,62 @@
       </header>
     </div>
     <main>
+      <div class="container">
+        <div class="row">
+          <div class="text-content"></div>
+          <div class="animation-content">
+            <div class="animation__main-screen">
+              <div class="main-screen--buttons">
+                <div class="btn btn1"></div>
+                <div class="btn btn2"></div>
+                <div class="btn btn3"></div>
+              </div>
+              <div class="main-screen--search-line">
+                <div class="line"></div>
+              </div>
+              <div class="main-screen--big-screen"></div>
+            </div>
+            <div class="user-icon">
+              <div class="user-icon--head"></div>
+              <div class="user-icon--body"></div>
+            </div>
+            <div class="content-icon icon1">
+                <div class="screen-text"></div>
+                <div class="screen-content"></div>
+                <div class="screen-buttons">
+                  <div class="btn btn1"></div>
+                  <div class="btn btn2"></div>
+                  <div class="btn btn3"></div>
+                </div>
+            </div>
+            <div class="content-icon icon2">
+              <div class="screen-text"></div>
+              <div class="screen-content"></div>
+              <div class="screen-buttons">
+                <div class="btn btn1"></div>
+                <div class="btn btn2"></div>
+                <div class="btn btn3"></div>
+              </div>
+          </div>
+          <div class="how-to-icon">
+            <div class="main-screen--buttons">
+              <div class="btn btn1"></div>
+              <div class="btn btn2"></div>
+              <div class="btn btn3"></div>
+            </div>
+            <div class="main-screen--search-line">
+              <div class="line"></div>
+             </div>
+              <div class="main-screen--big-screen">
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+              </div>
+          </div>  
+          </div>
+        </div>
+      </div>
       <div class="content">
         <div class="text">
           <h1 class="text-header">Templates</h1>
@@ -139,7 +195,6 @@
                 <div class="step-item">
                     <h3>3.Step</h3>
                     <div class="step-text"></div>
-                    <div class="step-text2"></div>
                     <div class="step-text3"></div>
                     <div class="step-code">
                       <div class="step-code-text">
@@ -293,6 +348,9 @@
         </div>
       </div>
     </main>
+    <footer>
+
+    </footer>
     <script src="main.js"></script>
     <script>
       const icon = document.querySelector(".header-search__icon");
