component is designing

--- a/index.html
+++ b/index.html
@@ -102,8 +102,68 @@
                   <div class="step-no"></div>
                   <div class="step-text"></div>
                 </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                
               </div>
           </div>  
+          <div class="icon like-icon">
+            <i class="fa-solid fa-thumbs-up "></i>
+          </div>
+          <div class="icon heart-icon">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="comment-icon">
+            <div class="main-screen--buttons">
+              <div class="btn btn1"></div>
+              <div class="btn btn2"></div>
+              <div class="btn btn3"></div>
+            </div>
+            <div class="main-screen--search-line">
+              <div class="line"></div>
+            </div>
+            <div class="main-screen--big-screen">
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+                <div class="steps">  
+                  <div class="step-no"></div>
+                  <div class="step-text"></div>
+                </div>
+            </div>
+          </div>
+
           </div>
         </div>
       </div>
