first comp finished

--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="text-content"></div>
+          <div class="text-content">
+            <div class="main-text">
+              <p> Let's code  and design with together!</p>
+            </div>
+            <div class="sub-text"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto illum optio porro voluptatem, possimus hic?</p></div>
+            <div class="buttons">
+              <button class=" btn btn1"><p>Read More</p></button>
+              <button class="btn btn2"><p>Join Us!</p></button>
+            </div>
+          </div>
           <div class="animation-content">
             <div class="animation__main-screen">
               <div class="main-screen--buttons">
@@ -149,18 +158,19 @@
               <div class="btn btn2"></div>
               <div class="btn btn3"></div>
             </div>
-            <div class="main-screen--search-line">
-              <div class="line"></div>
-            </div>
-            <div class="main-screen--big-screen">
-                <div class="steps">  
-                  <div class="step-no"></div>
-                  <div class="step-text"></div>
-                </div>
-                <div class="steps">  
-                  <div class="step-no"></div>
-                  <div class="step-text"></div>
-                </div>
+            <div class="comments">
+              <div class="comment">
+                <div class="user"></div>
+                <div class="user-comment"></div>
+              </div>
+              <div class="comment">
+                <div class="user"></div>
+                <div class="user-comment"></div>
+              </div>
+              <div class="comment">
+                <div class="user"></div>
+                <div class="user-comment"></div>
+              </div>
             </div>
           </div>
 
