--- a/index.html
+++ b/index.html
@@ -177,55 +177,57 @@
           </div>
         </div>
       </div>
-      <div class="content">
-        <div class="text">
-          <h1 class="text-header">Templates</h1>
-          <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
-        </div>
-        <div class="card">
-          <div class="card-image"></div>
-          <div class="card-text">
-            <h3 class="card-text_name">Templates</h2>
-            <p class="card-text_content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-              consequatur optio. Ratione perferendis quae nulla.
-            </p>
+      <div class="templates">
+        <div class="content">
+          <div class="text">
+            <h1 class="text-header">Templates</h1>
+            <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
           </div>
-          <button class="card-btn">Show</button>
-        </div>
-      </div>
-      <div class="content">
-        <div class="card">
-          <div class="card-image"></div>
-          <div class="card-text">
-            <h3 class="card-text_name">Icons</h2>
-            <p class="card-text_content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-              consequatur optio. Ratione perferendis quae nulla.
-            </p>
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">
+              <h3 class="card-text_name">Templates</h2>
+              <p class="card-text_content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+                consequatur optio. Ratione perferendis quae nulla.
+              </p>
+            </div>
+            <button class="card-btn">Show</button>
           </div>
-          <button class="card-btn">Show</button>
         </div>
-        <div class="text">
-          <h1 class="text-header">Icons</h1>
-          <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
-        </div>
-      </div>
-      <div class="content">
-        <div class="text">
-          <h1 class="text-header">Templates</h1>
-          <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
-        </div>
-        <div class="card">
-          <div class="card-image"></div>
-          <div class="card-text">
-            <h3 class="card-text_name">Templates</h2>
-            <p class="card-text_content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-              consequatur optio. Ratione perferendis quae nulla.
-            </p>
+        <div class="content">
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">
+              <h3 class="card-text_name">Icons</h2>
+              <p class="card-text_content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+                consequatur optio. Ratione perferendis quae nulla.
+              </p>
+            </div>
+            <button class="card-btn">Show</button>
           </div>
-          <button class="card-btn">Show</button>
+          <div class="text">
+            <h1 class="text-header">Icons</h1>
+            <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="text">
+            <h1 class="text-header">Templates</h1>
+            <p class="text-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem fuga enim hic iure aut incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quidem dolore ab debitis! Dolore quidem pariatur placeat doloribus tenetur itaque.</p>
+          </div>
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">
+              <h3 class="card-text_name">Templates</h2>
+              <p class="card-text_content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+                consequatur optio. Ratione perferendis quae nulla.
+              </p>
+            </div>
+            <button class="card-btn">Show</button>
+          </div>
         </div>
       </div>
       <div class="how-to-do">
@@ -419,7 +421,63 @@
       </div>
     </main>
     <footer>
-
+      <div class="main-footer">
+        <div class="company-info">
+          <div class="company-logo">
+              <p>FEDSİMA</p>
+          </div>
+          <div class="company-information">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat eum reiciendis impedit nemo, accusantium fuga?</p>
+          </div>
+          <div class="social-media">
+            <div class="media facebook"><i class="fa-brands fa-facebook fa-lg"></i></div>
+            <div class="media youtube"><i class="fa-brands fa-youtube fa-lg"></i></div>
+            <div class="media twitter"><i class="fa-brands fa-twitter-square fa-lg"></i></div>
+            <div class="media instagram"><i class="fa-brands fa-instagram-square fa-lg"></i></div>
+          </div>
+          <div class="contact-info">
+            <div class="icon email"><p>nursima.asilturk@gmail.com</p></div>
+            <div class="icon location"><p>1600 Amphitheatre Parkway Mountain View, CA 94043</p></div>
+          </div>
+        </div>
+        <div class="content-info">
+          <div class="content-item">
+            <h1>Templates</h1>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+          </div>
+          <div class="content-item">
+            <h1>İcons</h1>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+          </div>
+          <div class="content-item">
+            <h1>Contents</h1>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+          </div>
+          <div class="content-item">
+            <h1>Contents</h1>
+            <p>About Us</p>
+            <p>FAQ</p>
+            <p>Contact Us</p>
+            <p>Read More</p>
+          </div>
+        </div>
+      </div>
+      <div class="get-started-icon">
+        <div class="text"><p>Ready for coding and designing on new project?</p><p class="sub-text">Lets Start!</p>
+        </div>
+        <div class="button">
+          <button type="submit" class="get-started">Get Started!</button>
+        </div>
+      </div>
     </footer>
     <script src="main.js"></script>
     <script>
